# BasicGL

Engine/: .gitignore  CMakeLists.txt
Engine/includes/assimp/: revision.h
Engine/includes/glad/: gl.h
Engine/resources/shaders/: test.fs  test.vs
Engine/src/: main.cpp
Engine/src/Backend/Camera/: Camera.cpp  Camera.h
Engine/src/Backend/FileSystem/: FileReader.cpp  FileReader.h
Engine/src/Backend/Mesh/: Mesh.cpp  Mesh.h  MeshGeneration.cpp  MeshGeneration.h  VertexConfiguration.h
Engine/src/Backend/Mesh/Primitives/: Primitives.h  Sphere.cpp  Sphere.h
Engine/src/Backend/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUniformTable.cpp  ShaderUniformTable.h
